apps/production/client-sites/_templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __CLIENT__
  namespace: lulo-demo-landings
  labels:
    app: __CLIENT__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __CLIENT__
  template:
    metadata:
      labels:
        app: __CLIENT__
        name: __CLIENT__
    spec:
      containers:
      - name: __CLIENT__
        image: "registry.yesidlopez.de/__CLIENT__:v0.0.1" # {"$imagepolicy": "lulo-demo-landings:__CLIENT__"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
